# lexer

./: .gitignore  AGENTS.md  README.md  test.md
.agents/skills/cr-first-design/: SKILL.md
docs/: 01-overview.md  02-markdown.md  03-tree-sitter.md  04-ui.md  05-visual-effects.md  06-command-palette.md  07-keyboard.md  08-windows-and-layouts.md  09-themes.md  10-filesystem.md  11-project-structure.md  12-config.md  13-dependencies.md  14-build.md  15-future.md  16-block-select.md  17-opencode.md  18-custom-commands.md  PROGRESS.md  SPEC.md
docs/cr/: 001-gx-border-and-traffic-lights.md  002-global-toggle-shortcut.md  003-neon-glassmorphism-effects.md
src/: app.js  effects.css  effects.js  index.html  keyboard.js  layout.css  layout.js  palette.js  particles.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  main.rs  opencode.rs  state.rs
src-tauri/src/fs/: loader.rs  mod.rs  watcher.rs
src-tauri/src/highlight/: mod.rs  registry.rs
src-tauri/src/markdown/: mod.rs  parser.rs
src-tauri/src/theme/: engine.rs  mod.rs
src-tauri/themes/: lexer-dark.toml  lexer-light.toml  lexer-mono.toml  lexer-neon.toml  lexer-nord.toml  lexer-solarized.toml  lexer-terminal.toml
