[package]
name = "lexer"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
window-vibrancy = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-global-shortcut = "2"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSButton", "NSControl", "NSView", "NSResponder", "NSApplication", "NSRunningApplication"] }

# Markdown
pulldown-cmark = { version = "0.12", features = ["html"] }

# Tree-sitter
tree-sitter = "0.25"
tree-sitter-highlight = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-json = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-bash = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-md = "0.5"

# File system
notify = "7"
notify-debouncer-mini = "0.5"
walkdir = "2"

# Serialization & config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Unix process detach
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# OpenCode integration
sysinfo = "0.30"
reqwest = { version = "0.12", features = ["json"] }
